k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-api
  labels:
    app: hello-world-api
spec:
  selector:
    app: hello-world-api
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
