k8s/http-route-auth.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-world-auth-route
spec:
  parentRefs:
    - kind: Gateway
      name: shared-kong-gateway
      namespace: kong
  hostnames:
    - api.moraes.lat
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth
      backendRefs:
        - name: hello-world-api
          port: 80
