k8s/http-route-kong.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-world-kong-route
spec:
  parentRefs:
    - kind: Gateway
      name: shared-kong-gateway
      namespace: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hello-world-api
          port: 80
